--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
-this is something!
-this is something more!
-this is some more
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>repl.it</title>
+    
+  </head>
+  <body>
+    <h1>This is my page</h1>
+
+    
+  </body>
+</html>
